<resources>
    <string name="app_name">LastPage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_page_intro">Novels from you that will touch your heart</string>
    <string name="novel_text">Novels</string>
    <string name="cart_price_text">Price:</string>
    <string name="cart_button">Add to Cart</string>
    <string name="chip_about">About</string>
    <string name="chip_author">Last Page Note</string>
    <string name="tool_detail_text">Detail Page</string>
    <string name="card_caart_text">Your cart is empty!  Continue the shopping</string>
    <string name="cart_text">Your cart:</string>
    <string name="sign_text">Sign In</string>
    <string name="log_bt">Logın</string>
    <string name="sign_up_text">Sıgn Up</string>
    <string name="register_bt">Regıster</string>
    <string name="detaid_bt_text">Detail Page</string>
    <string name="discount_text">instead of just:</string>
    <string name="tool_camp">Stars of the Day</string>
    <string name="tool_profil">Profil</string>
    <string name="tool_cart">Your Cart</string>
    <string name="validate_toast">Please try again, password or mail account do not match!</string>
    <string name="toast_pay">Thanks for  shopping!</string>
    <string name="toast_cart_add">Product added to cart!</string>
    <string name="toas_exist">It\'s already added to cart!</string>
    <string name="toast_delete">Product removed from cart!</string>
    <string name="card_cart_full">Great choice!</string>
    <string name="cart_full_message">Great choice!</string>
    <string name="validate_blank">Fields cannot be empty!</string>
    <string name="app_title">Last Page</string>
    <string name="register_success">Success!</string>
    <string name="name_surname">Name Surname</string>
    <string name="mail">Mail Account</string>
    <string name="phone">Phone Number</string>
</resources>