<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="customersObj"
            type="com.example.sharebook.entity.Customers" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray"
        tools:context=".fragment.ProfilFragment">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolProfil"
            android:layout_width="407dp"
            android:layout_height="wrap_content"
            android:background="@drawable/tool_bg"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:fontFamily="@font/ubuntu_bold"
                android:text="@string/tool_profil"
                android:textColor="@color/light_black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="143dp"
                tools:layout_editor_absoluteY="12dp" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="400dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolProfil">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintBottom_toTopOf="@+id/imageView9"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/gamer" />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintBottom_toTopOf="@+id/imageView10"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView8"
                    app:srcCompat="@drawable/email" />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView9"
                    app:srcCompat="@drawable/phone_two" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="64dp"
                    android:fontFamily="@font/ubuntu_medium"
                    android:text="TextView"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/guideline3"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/name_surname" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@{customersObj.ad_soyad}"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/textView20"
                    app:layout_constraintTop_toBottomOf="@+id/textView20" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="68dp"
                    android:fontFamily="@font/ubuntu_medium"
                    android:text="TextView"
                    app:layout_constraintStart_toStartOf="@+id/textView24"
                    app:layout_constraintTop_toBottomOf="@+id/textView21"
                    tools:text="@string/mail" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="74dp"
                    android:fontFamily="@font/ubuntu_medium"
                    android:text="TextView"
                    app:layout_constraintStart_toStartOf="@+id/textView25"
                    app:layout_constraintTop_toBottomOf="@+id/textView24"
                    tools:text="@string/phone" />

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@{customersObj.mail_adres}"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/textView21"
                    app:layout_constraintTop_toBottomOf="@+id/textView22" />

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@{customersObj.telefon}"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/textView24"
                    app:layout_constraintTop_toBottomOf="@+id/textView23" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="111dp"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="105dp"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
